style.css
/* Styling Header */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  max-width: 1310px;
  margin: 0 auto;
  font-family: 'Poppins', sans-serif;
}

.nav-container {
  background-color: #d35749;
  height: 67px;
  color: #fff;
}

main {
  margin-top: 67px;
}

.top-links {
  font-size: 14px;
  display: inline-flex;
  align-items: center;
}

.nav-left {
  display: flex;
  align-items: center;
  justify-content: center;
}

.nav-right {
  display: flex;
  align-items: center;
  justify-content: center;
}

a {
  text-decoration: none;
}

.nav-left img {
  width: 40px;
  background-color: #fff;
}

.hero {
  text-align: center;
}

.main-search {
  text-align: left;
}

.main-title {
  font-size: 15px;
  font-weight: 600;
  width: 90%;
  margin: 10px auto;
}

.search-container {
  width: 90%;
  margin: 0 auto;
  background-color: rgba(255, 255, 255, 0.5);
  border-radius: 7px;
  font-size: 14px;
}

.main-img {
  background-image: linear-gradient(rgba(104, 103, 112, 0.4), rgba(0, 0, 0, 0.9)), url(images/austin-distel-unsplash.jpg);
  background-repeat: no-repeat;
  background-position: center;
  width: 100%;
  height: 400px;
  background-size: cover;
  padding: 10% 0;
}

#keyword,
.btn-search {
  width: 90%;
}

.btn-search {
  background-color: #d35749;
  border: none;
}

.btn-how-works {
  border: none;
  border-radius: 2px;
  font-size: 14px;
  opacity: 0.85;
}

.how-it-works {
  text-align: center;
  max-width: 580px;
  margin: 0 auto;
}

.how-it-works-title {
  color: #d35749;
  font-size: 14px;
  font-weight: 600;
}

.inner-works h5 {
  font-size: 16px;
  font-weight: 600;
}

.inner-works p {
  font-size: 12px;
}

.all-courses-container {
  background-color: #e17d65;
}

.experts-container {
  background-color: #98a5a5;
}

.location-container {
  background-color: #519bd7;
}

.benefits-img {
  width: 200px;
  height: 200px;
  border-radius: 50%;
}

.benefits {
  color: #fff;
  text-align: center;
}

.benefits p,
.benefits button {
  font-size: 12px;
}

.benefits button {
  background-color: #fff;
}

.benefits h6 {
  font-weight: 600;
}

.all-courses button {
  color: #d35749;
  border: none;
}

.experts button {
  color: #98a5a5;
  border: none;
}

.footer-top {
  height: 150px;
  background-color: #000;
  color: #fff;
}

.footer-links {
  display: flex;
  justify-content: space-around;
  font-size: 10px;
}

.footer-links li {
  padding: 5px 10px;
  align-self: center;
}

.footer-links a {
  color: #fff;
}

/* media queries */

@media (max-width: 1023px) {
  .top-links-words {
    display: none;
  }
}

@media (min-width: 768px) {
  .nav-container {
    display: flex;
    justify-content: space-between;
  }

  .main-title {
    font-size: 23px;
  }

  .how-works,
  .search-container {
    font-size: 16px;
  }

  .main-title,
  .search-container {
    max-width: 65%;
  }

  .bar-container {
    width: 85%;
    margin: 0 auto;
  }

  .btn-search {
    max-width: 96px;
  }

  .how-it-works-title {
    font-size: 18px;
  }

  .disp-flex {
    display: flex;
    justify-content: space-between;
  }

  .benefits {
    text-align: start;
  }

  .all-courses,
  .experts,
  .location {
    margin: auto 0;
    width: 50%;
  }
}

@media (max-width: 767px) {
  .nav-left h4 {
    font-size: 20px;
  }

  .footer-links-icon {
    display: none;
  }
}

@media (min-width: 768px) and (max-width: 1023px) {
  .btn-search {
    background-color: #509bd7;
  }
}

@media (min-width: 1024px) {
  .main-title {
    font-size: 28px;
  }

  .search-container {
    max-width: 830px;
  }

  .article-container-works {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 20px 150px;
  }
}

